--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,13 @@ application.title=LPII_EF_Gonzales_Sergio
 application.version=0.0.1
 
 # DataSource - MySQL 
-spring.datasource.url=jdbc:mysql://localhost:3306/lpii_ef_gonzales_sergio
+#spring.datasource.url=jdbc:mysql://localhost:3306/lpii_ef_gonzales_sergio
+spring.datasource.url=jdbc:mysql://cibertecsgonzalesm.mysql.database.azure.com:3306/lpii_ef_gonzales_sergio?useSSL=true&requireSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=admin
+#spring.datasource.username=root
+#spring.datasource.password=admin
+spring.datasource.username=cibertec
+spring.datasource.password=El1t0rzeradmin
 
 # Hibernate Properties
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
